# nexus-ai

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.web  README.md  STRUCTURE.md  build.gradle.kts  railway.json  railway.web.json  server.py  settings.gradle.kts
.codex-plugin/: plugin.json
.github/workflows/: pages.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/jni/: Android.mk  Application.mk  file-ops.c  native-shell.c  root-bridge.c  sandbox-bridge.c
app/src/main/res/drawable/: bg_card_dark.xml  bg_input_dark.xml  bg_neon_border.xml  bg_red_border.xml  ic_browser.xml  ic_cli.xml  ic_code_agent.xml  ic_files.xml  ic_graph.xml  ic_main_agent.xml  ic_memory.xml  ic_nexus_logo.xml  ic_observability.xml  ic_planner.xml  ic_rag.xml  ic_sandbox.xml  ic_settings.xml  ic_universal.xml
app/src/main/res/font/: sf_pro.xml
app/src/main/res/layout/: activity_main.xml  dialog_add_entity.xml  dialog_file_preview.xml  drawer_header.xml  fragment_browser.xml  fragment_cli.xml  fragment_code_agent.xml  fragment_files.xml  fragment_graph.xml  fragment_main_agent.xml  fragment_memory.xml  fragment_observability.xml  fragment_planner.xml  fragment_rag.xml  fragment_sandbox.xml  fragment_settings.xml  fragment_universal_agent.xml  item_bottleneck_alert.xml  item_breadcrumb.xml  item_chunk.xml  item_file.xml  item_file_grid.xml  item_file_list.xml  item_message.xml  item_task.xml  panel_file_preview.xml  view_empty_alerts.xml  view_graph_query_panel.xml  view_relation_editor.xml  view_stats_bar.xml
app/src/test/: BrowserTest.kt  CICDIntegrationTest.kt  CLIExecutorTest.kt  ChatEngineTest.kt  GraphMemoryTest.kt  LLMBridgeTest.kt  MemoryTest.kt  PlannerTest.kt  RAGTest.kt  ResponseCacheTest.kt  RouterTest.kt  SandboxTest.kt  TokenCounterTest.kt  TracerTest.kt  WorkerQueueTest.kt
bot/: .env.example  Dockerfile  bot.py  requirements.txt
dashboard/: index.html
dashboard/js/: files.js  graph.js  planner.js  rag.js  sandbox.js  settings.js
dashboard/styles/: components.css
docs/: index.html  index_new.html
docs/js/: app.js  app.js.bak  browser.js  chat.js  chat.js.bak  cicd.js  cli.js  code-agent.js  memory.js  nexus-core.js  observability.js  settings.js  skill-registry.js
docs/js/plugins/: plugin-manager.js
docs/plugins/: manifest.json
docs/plugins/analytics/: plugin.js  plugin.json
docs/plugins/code-review/: plugin.js  plugin.json
docs/plugins/mcp-bridge/: plugin.js  plugin.json
docs/plugins/skill-hub/: plugin.js  plugin.json
docs/plugins/trading/: plugin.js  plugin.json
docs/styles/: animations.css  components.css  main.css
gradle/: libs.versions.toml
(+250 files in other folders)
